--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -13,6 +13,7 @@
                 <%= content_tag(:div, f.text_field(:publicUrl, class: ["form-input", "form-public"], placeholder: "Public URL"), class: "form-item") %>
                 <%= content_tag(:div, f.text_field(:adminUrl, class: ["form-input", "form-admin"], placeholder: "Admin URL"), class: "form-item") %>
                 <%= content_tag(:div, f.text_field(:gitUrl, class: ["form-input", "form-git"], placeholder: "Github URL"), class: "form-item") %>
+                <%= content_tag(:div, f.text_field(:position, class: ["form-input", "form-git"], placeholder: "Position"), class: "form-item") %>
                 <div class="form-item form-main image">
 
                 </div>
