mobile response update

--- a/app/views/home/detail.html.erb
+++ b/app/views/home/detail.html.erb
@@ -3,7 +3,7 @@
     <% @projects.each do |p| %>
         <div id="experience" class="category <%= "selectedProject" if @selected && p.id == @selected.id %>">
             <h2 class="quick"><%= p.title %></h2>
-            <p class="intro"><%= p.intro %></p>
+            <p class="quick"><%= p.intro %></p>
             <div class="category-item">
                 <ul>
                     <li><%= p.description %></li>
