--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
         <div class="projects">
             <% @projects.each do |p| %>
                 <div class="category-item" data-item="<%= p.id%>">
-                    <h3 class="intro"><%= p.title %></h3>
+                    <h3 class="quick"><%= p.title %></h3>
                     <ul>
                         <li class="intro"><%= p.intro %></li>
                         <li class="intro">
