--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -41,6 +41,7 @@
                 </div>
                 <div class="form-buttons">
                 <%= f.submit("Save") %>
+                <%= link_to("Cancel", projects_path()) %>
             </div>
             </div>
         <% end %>     
