--- a/app/views/layouts/resume.html.erb
+++ b/app/views/layouts/resume.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>PDF</title>
-  <%= wicked_pdf_stylesheet_link_tag "resume_print" -%>
+  <%= wicked_pdf_stylesheet_link_tag "resume_print" %>
 </head>
 <body>
   <div class='container'>
