temp switch to fixed pdf to figure out wickedpdf

--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -1,4 +1,4 @@
-<div class="quick head"><%= link_to(fa_icon("file"), resume_path(format: :pdf)) %><span class="res-space">Resume</span></div>
+<div class="quick head"><%= link_to(fa_icon("file"), "/resume.pdf") %><span class="res-space">Resume</span></div>
 <div class="resume">
     <div id="experience" class="category">
         <h2 class="quick">Experience</h2>
