project listed by position

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="form-buttons">
-                <%= f.submit("Edit #{@project.title}") %>
+                <%= f.submit("Save Changes to #{@project.title}") %>
                 <%= link_to('Delete', delete_project_path(@project.id)) %>
             </div>
             </div>
