--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
         <div class="category-item">
             <ul>
                 <li>Uniquely expirenced in business for a developer<br />(Employee, Manager, Owner)</li>
-                <li>8 and counting live projects</li>
+                <li>11 and counting LIVE projects</li>
                 <li>Numerous more in house projects used in private businesses</li> 
                 <li>HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL</li>
                 <li>16 Certificates from Lynda/LinkedIn Learning</li>
