Working through lighthouse. Now pwa

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -580,7 +580,7 @@ body {
             height: 53px;
             cursor: pointer;
             background-color: $light-orange;
-            color: white;
+            color: black;
             font-size: 25px;
             text-align: center;
             transform: rotate(90deg);
