--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
         <h2 class="quick">Quick Info</h2>
         <div class="category-item">
             <ul>
-                <li>Uniquely expirenced in business for a developer<br />(Employee, Manager, Owner)</li>
+                <li>Uniquely experienced in business for a developer<br />(Employee, Manager, Owner)</li>
                 <li>11 and counting LIVE projects</li>
                 <li>Numerous more in house projects used in private businesses</li> 
                 <li>HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL</li>
@@ -39,7 +39,7 @@
                             <% end %>
                         </li>
                         <% if p.main_image.attached? %>
-                            <li class="intro"><%= image_tag(p.main_image, class: "project-image") %></li>
+                            <li class="intro"><%= image_tag(p.main_image, alt: p.main_alt, class: "project-image") %></li>
                         <% end %>
                     </ul>
                 </div>
