--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#fc9c54"/>
+    <link rel="apple-touch-icon" href="images/icons/touch-icon-iphone.png">
   </head>
 
   <body class="admin">
