--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -11,6 +11,8 @@
     <script src="https://js.stripe.com/v3/"></script>
     <link rel="manifest" href="/manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#fc9c54"/>
+    <link rel="apple-touch-icon" href="images/icons/touch-icon-iphone.png">
   </head>
 
   <body>
